# Gstreamer-Plugin-Insert-Logo

./: README.md
InsertLogo_Divyesh/gst-plugin/: meson.build
InsertLogo_Divyesh/gst-plugin/src/: gstinsertlogo.c  gstinsertlogo.h
docs/: training.md  training.md:Zone.Identifier
